Compiladores_Proyecto1-main/src/main/java/com/compi/Gramatica_ANLTR4/ProjParser.java
// Generated from Proj.g4 by ANTLR 4.13.2

      package com.compi.Gramatica_ANLTR4;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProjParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, Digitos=38, Cadena=39, 
		NEWLINE=40, BLANKSPACE=41, COMP=42, EQUAL=43;
	public static final int
		RULE_prog = 0, RULE_header = 1, RULE_body_end = 2, RULE_segvar = 3, RULE_defvar = 4, 
		RULE_segfunct = 5, RULE_deffunct = 6, RULE_bodyfunct = 7, RULE_defarith = 8, 
		RULE_bodysegE = 9, RULE_bodysegE2 = 10, RULE_bodysegT = 11, RULE_bodysegT2 = 12, 
		RULE_itemarith = 13, RULE_body_program = 14, RULE_def_cond = 15, RULE_def_exp = 16, 
		RULE_else_cond = 17, RULE_def_while = 18, RULE_def_w = 19, RULE_call_funct = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "header", "body_end", "segvar", "defvar", "segfunct", "deffunct", 
			"bodyfunct", "defarith", "bodysegE", "bodysegE2", "bodysegT", "bodysegT2", 
			"itemarith", "body_program", "def_cond", "def_exp", "else_cond", "def_while", 
			"def_w", "call_funct"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Program'", "'BEGIN'", "'END'", "'NAME'", "';'", "'FINITO;'", 
			"'VARIABLE'", "':'", "'int'", "'='", "'float'", "'.'", "'string'", "'bool'", 
			"'true'", "'false'", "'FUNCTION'", "'function'", "'('", "')'", "'{'", 
			"'}'", "'RETURN'", "'+'", "'-'", "'*'", "'/'", "'cond'", "'if'", "'else'", 
			"'loop'", "'while'", "'output'", "'write'", "'input'", "'read'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "Digitos", "Cadena", "NEWLINE", "BLANKSPACE", "COMP", "EQUAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Proj.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProjParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public SegvarContext segvar() {
			return getRuleContext(SegvarContext.class,0);
		}
		public SegfunctContext segfunct() {
			return getRuleContext(SegfunctContext.class,0);
		}
		public Body_programContext body_program() {
			return getRuleContext(Body_programContext.class,0);
		}
		public Body_endContext body_end() {
			return getRuleContext(Body_endContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ProjParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			header();
			setState(44);
			segvar();
			setState(45);
			segfunct();
			setState(46);
			match(T__1);
			setState(47);
			body_program();
			setState(48);
			body_end();
			setState(49);
			match(T__2);
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ProjParser.ID, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(T__3);
			setState(53);
			match(ID);
			setState(54);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Body_endContext extends ParserRuleContext {
		public Body_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBody_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBody_end(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBody_end(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Body_endContext body_end() throws RecognitionException {
		Body_endContext _localctx = new Body_endContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SegvarContext extends ParserRuleContext {
		public List<DefvarContext> defvar() {
			return getRuleContexts(DefvarContext.class);
		}
		public DefvarContext defvar(int i) {
			return getRuleContext(DefvarContext.class,i);
		}
		public SegvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterSegvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitSegvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitSegvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegvarContext segvar() throws RecognitionException {
		SegvarContext _localctx = new SegvarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_segvar);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__6);
			setState(59);
			match(T__7);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 27136L) != 0)) {
				{
				setState(60);
				defvar();
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(61);
						match(T__4);
						setState(62);
						defvar();
						}
						} 
					}
					setState(67);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(68);
				match(T__4);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefvarContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ProjParser.ID, 0); }
		public List<TerminalNode> Digitos() { return getTokens(ProjParser.Digitos); }
		public TerminalNode Digitos(int i) {
			return getToken(ProjParser.Digitos, i);
		}
		public TerminalNode Cadena() { return getToken(ProjParser.Cadena, 0); }
		public DefvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterDefvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitDefvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitDefvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefvarContext defvar() throws RecognitionException {
		DefvarContext _localctx = new DefvarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defvar);
		int _la;
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				match(T__8);
				setState(73);
				match(ID);
				setState(74);
				match(T__9);
				setState(75);
				match(Digitos);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(T__10);
				setState(77);
				match(ID);
				setState(78);
				match(T__9);
				setState(79);
				match(Digitos);
				setState(80);
				match(T__11);
				setState(81);
				match(Digitos);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				match(T__12);
				setState(83);
				match(ID);
				setState(84);
				match(T__9);
				setState(85);
				match(Cadena);
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				match(T__13);
				setState(87);
				match(ID);
				setState(88);
				match(T__9);
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==T__14 || _la==T__15) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SegfunctContext extends ParserRuleContext {
		public DeffunctContext deffunct() {
			return getRuleContext(DeffunctContext.class,0);
		}
		public SegfunctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segfunct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterSegfunct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitSegfunct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitSegfunct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SegfunctContext segfunct() throws RecognitionException {
		SegfunctContext _localctx = new SegfunctContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_segfunct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__16);
			setState(93);
			match(T__7);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(94);
				deffunct();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeffunctContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ProjParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProjParser.ID, i);
		}
		public BodyfunctContext bodyfunct() {
			return getRuleContext(BodyfunctContext.class,0);
		}
		public DeffunctContext deffunct() {
			return getRuleContext(DeffunctContext.class,0);
		}
		public DeffunctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deffunct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterDeffunct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitDeffunct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitDeffunct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeffunctContext deffunct() throws RecognitionException {
		DeffunctContext _localctx = new DeffunctContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_deffunct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__17);
			setState(98);
			match(ID);
			setState(99);
			match(T__18);
			setState(100);
			match(ID);
			setState(101);
			match(T__19);
			setState(102);
			match(T__20);
			setState(103);
			bodyfunct();
			setState(104);
			match(T__21);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__17) {
				{
				setState(105);
				deffunct();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyfunctContext extends ParserRuleContext {
		public DefarithContext defarith() {
			return getRuleContext(DefarithContext.class,0);
		}
		public TerminalNode ID() { return getToken(ProjParser.ID, 0); }
		public BodyfunctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyfunct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBodyfunct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBodyfunct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBodyfunct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyfunctContext bodyfunct() throws RecognitionException {
		BodyfunctContext _localctx = new BodyfunctContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bodyfunct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			defarith();
			setState(109);
			match(T__4);
			setState(110);
			match(T__22);
			setState(111);
			match(ID);
			setState(112);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefarithContext extends ParserRuleContext {
		public BodysegEContext bodysegE() {
			return getRuleContext(BodysegEContext.class,0);
		}
		public DefarithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defarith; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterDefarith(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitDefarith(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitDefarith(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefarithContext defarith() throws RecognitionException {
		DefarithContext _localctx = new DefarithContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_defarith);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			bodysegE();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodysegEContext extends ParserRuleContext {
		public BodysegTContext bodysegT() {
			return getRuleContext(BodysegTContext.class,0);
		}
		public BodysegE2Context bodysegE2() {
			return getRuleContext(BodysegE2Context.class,0);
		}
		public BodysegEContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodysegE; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBodysegE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBodysegE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBodysegE(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodysegEContext bodysegE() throws RecognitionException {
		BodysegEContext _localctx = new BodysegEContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bodysegE);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			bodysegT();
			setState(117);
			bodysegE2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodysegE2Context extends ParserRuleContext {
		public BodysegTContext bodysegT() {
			return getRuleContext(BodysegTContext.class,0);
		}
		public BodysegE2Context bodysegE2() {
			return getRuleContext(BodysegE2Context.class,0);
		}
		public BodysegE2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodysegE2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBodysegE2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBodysegE2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBodysegE2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodysegE2Context bodysegE2() throws RecognitionException {
		BodysegE2Context _localctx = new BodysegE2Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_bodysegE2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__23:
				{
				setState(119);
				match(T__23);
				setState(120);
				bodysegT();
				setState(121);
				bodysegE2();
				}
				break;
			case T__24:
				{
				setState(123);
				match(T__24);
				setState(124);
				bodysegT();
				setState(125);
				bodysegE2();
				}
				break;
			case T__4:
			case T__19:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodysegTContext extends ParserRuleContext {
		public ItemarithContext itemarith() {
			return getRuleContext(ItemarithContext.class,0);
		}
		public BodysegT2Context bodysegT2() {
			return getRuleContext(BodysegT2Context.class,0);
		}
		public BodysegTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodysegT; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBodysegT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBodysegT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBodysegT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodysegTContext bodysegT() throws RecognitionException {
		BodysegTContext _localctx = new BodysegTContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_bodysegT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			itemarith();
			setState(130);
			bodysegT2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodysegT2Context extends ParserRuleContext {
		public ItemarithContext itemarith() {
			return getRuleContext(ItemarithContext.class,0);
		}
		public BodysegT2Context bodysegT2() {
			return getRuleContext(BodysegT2Context.class,0);
		}
		public BodysegT2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodysegT2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterBodysegT2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitBodysegT2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitBodysegT2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodysegT2Context bodysegT2() throws RecognitionException {
		BodysegT2Context _localctx = new BodysegT2Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_bodysegT2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__25:
				{
				setState(132);
				match(T__25);
				setState(133);
				itemarith();
				setState(134);
				bodysegT2();
				}
				break;
			case T__26:
				{
				setState(136);
				match(T__26);
				setState(137);
				itemarith();
				setState(138);
				bodysegT2();
				}
				break;
			case T__4:
			case T__19:
			case T__23:
			case T__24:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemarithContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ProjParser.ID, 0); }
		public TerminalNode Digitos() { return getToken(ProjParser.Digitos, 0); }
		public BodysegEContext bodysegE() {
			return getRuleContext(BodysegEContext.class,0);
		}
		public ItemarithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itemarith; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).enterItemarith(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProjListener ) ((ProjListener)listener).exitItemarith(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProjVisitor ) return ((ProjVisitor<? extends T>)visitor).visitItemarith(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemarithContext itemarith() throws RecognitionException {
		ItemarithContext _localctx = new ItemarithContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_itemarith);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(ID);
				}
				break;
			case Digitos:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(Digitos);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(T__18);
				setState(145);
				bodysegE();
				setState(146);
				match(T__19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
